--- a/create.html
+++ b/create.html
@@ -21,7 +21,7 @@
             <span>Contactanos</span>
         </div>
     </nav> 
-    <section  class='' id='cakeSize'>
+    <section  class='hide' id='cakeSize'>
         <div class="containerTitleButon">
             <span class="titleButon">¿Que tamaño de pastel necesitas?</span>
         </div> 
@@ -30,7 +30,7 @@
                 <span>Pastel Grande</span>
                 <img src="./img/bigCake.png">
                 <div class="buttonContainer">
-                        <div  onclick="big();">
+                        <div  onclick="size('big');">
                             <span>Grande</span>
                             <img src="./img/butonIcon.png">
                         </div>
@@ -51,14 +51,14 @@
             </div>
         </main> 
     </section>
-
-    <section class="hide" id='firtsBiscuiit'>
+</div>
+    <section class="" id='firtsBiscuiit'>
         <div class="containerTitleButon">
             <span class="titleButon biscocho">Escoje tu primer biscocho (puedes hasta 3)</span>
         </div> 
         <main>
             <div class="sizeCake" onclick="preSelection('fresa')">
-                <span id="fresa" class="">Fresa</span>
+                <span id="fresa" class="o">Fresa</span>
                 <img src="./img/fresa.png">
                 <div class="buttonContainer">
                 </div>
@@ -86,73 +86,6 @@
         </div>
     </section>
 
-    <section class="hide" id='secondBiscuiit'>
-        <div class="containerTitleButon">
-            <span class="titleButon biscocho">Escoje tu segundo biscocho (puedes hasta 3)</span>
-        </div> 
-        <main>
-            <div class="sizeCake" onclick="preSelection('fresa1')">
-                <span id="fresa1" class="">Fresa</span>
-                <img src="./img/fresa.png">
-                <div class="buttonContainer">
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="sizeCake" onclick="preSelection('vainilla1')">
-                <span id="vainilla1" class="">Vainilla</span>
-                <img src="./img/vainilla.png">
-                <div class="buttonContainer">
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="sizeCake" onclick="preSelection('chocolate1')">
-                <span id="chocolate1" class="">Chocolate</span>
-                <img src="./img/chocolate.png">
-                <div class="buttonContainer">
-                </div>
-            </div>
-        </main> 
-        <div class="buttonContainer">
-                <div onclick="selected('secondBiscuiit')">
-                    <span>Crealo</span>
-                    <img src="./img/butonIcon.png">
-                </div>
-        </div>
-    </section>
-
-    <section class="hide" id='thirdBiscuiit'>
-        <div class="containerTitleButon">
-            <span class="titleButon biscocho">Escoje tu tercer biscocho (puedes hasta 3)</span>
-        </div> 
-        <main>
-            <div class="sizeCake" onclick="preSelection('fresa2')">
-                <span id="fresa2" class="">Fresa</span>
-                <img src="./img/fresa.png">
-                <div class="buttonContainer">
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="sizeCake" onclick="preSelection('vainilla2')">
-                <span id="vainilla2" class="">Vainilla</span>
-                <img src="./img/vainilla.png">
-                <div class="buttonContainer">
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="sizeCake" onclick="preSelection('chocolate2')">
-                <span id="chocolate2" class="">Chocolate</span>
-                <img src="./img/chocolate.png">
-                <div class="buttonContainer">
-                </div>
-            </div>
-        </main> 
-        <div class="buttonContainer">
-                <div onclick="selected('thirdBiscuiit')">
-                    <span>Crealo</span>
-                    <img src="./img/butonIcon.png">
-                </div>
-        </div>
-    </section>
 
     <section  class='hide' id='flavor'>
         <div class="containerTitleButon">
